# hermess-agent

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: clone-mentor.md  concept-lecturer.md  curriculum-architect.md  learning-tutor.md  practice-designer.md  site-builder.md
.claude/skills/_shared/: claude-api-cheatsheet.md  content-conventions.md  curriculum.md  hermes-spec.md
.claude/skills/clone-building/: SKILL.md
.claude/skills/concept-writing/: SKILL.md
.claude/skills/curriculum-design/: SKILL.md
.claude/skills/html-site-build/: SKILL.md
.claude/skills/html-site-build/assets/: module-template.html
.claude/skills/learning-harness/: SKILL.md
.claude/skills/learning-harness/references/: deploy-github-pages.md  orchestration-flow.md
.claude/skills/practice-design/: SKILL.md
.claude/skills/qa-recording/: SKILL.md
.claude/skills/review-generation/: SKILL.md
clone-project/: .env.example  .gitignore  README.md  pyproject.toml
clone-project/_solution/01-llm-basics/hermes/: __main__.py  config.py  llm.py
docs/: index.html
docs/assets/: app.js  style.css
docs/data/: curriculum.json  qa-log.jsonl
docs/modules/: 00-what-is-an-agent.html  01-llm-basics.html
docs/qa/: index.html
